# pre-joining-tasks

./: README.md
router_parser/: .flake8  pyproject.toml
router_parser/data/: clean_routers.json  messy_routers.csv
router_parser/src/router_parser/: main.py  models.py  utils.py
